# octo-model-repository

./: .gitattributes  .gitignore  README.md  config.yaml  create_embedding.md  deep_research.py  embedding_design.md  hello.py  pyproject.toml  reproduce_issue.py  task.md  train_phase1.sh
model_repository/: model_download.py
models/: granite.tar.part-aa  granite.tar.part-ab  granite.tar.part-ac  granite.tar.part-ad  granite.tar.part-ae  granite.tar.part-af  granite.tar.part-ag
models/tokenizer/: tokenizer.json  tokenizer_config.json
octo_embedding_model/: __init__.py  data_loader.py  download_datasets.py  evaluate.py  get_wikipedia_data.py  model_architecture.py  serve_mistral.py  train_mistral.py  train_phase1.py  train_phase2.py  train_tokenizer.py  trainer_utils.py
tests/: test_data_loader.py  test_integration.py  test_tokenizer.py  test_train_mistral.py  test_train_phase1.py  test_trainer_utils.py  test_training.py
tokenizer/: tokenizer.json
