[project]
name = "octo-model-repository"
version = "0.1.0"
description = "Training Chroma-MoE embedding models for finance and e-commerce domains."
authors = [{ name = "Shankhadeep Roy", email = "shankharay.917@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = { text = "MIT License" }
keywords = ["embedding", "moe", "finance", "ecommerce", "transformers"]
dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=3.0.0",
    "tokenizers>=0.15.0",
    # Training
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0",
    # Evaluation
    "scikit-learn>=1.0.0",
    "numpy>=1.24.0",
    "zstandard>=0.25.0",
]

[project.urls]
Homepage = "https://shankha06.github.io/octo-model-repository/"
Repository = "https://github.com/shankha06/octo-model-repository"
Documentation = "https://shankha06.github.io/octo-model-repository/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
eval = [
    "mteb>=1.0.0",
    "sentence-transformers>=2.0.0",
]

[tool.setuptools]
packages = ["octo_embedding_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=octo_embedding_model --cov-report=term-missing --full-trace"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["octo_embedding_model"]

[tool.mypy]
files = ["octo_embedding_model"]
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = true
show_error_codes = true

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
